--- a/src/app/Compartido/home/home.component.html
+++ b/src/app/Compartido/home/home.component.html
@@ -23,6 +23,10 @@
                             </mat-select>
                             
                         </mat-form-field>
+                        <mat-form-field class="buscador-box-formulario-input" appearance="fill">
+                            <mat-label>Empresa</mat-label>
+                            <input matInput formControlName="nombre_empresa">
+                        </mat-form-field>
                     </div>
     
                     <div>
