--- a/src/app/Compartido/buscar-empleo/buscar-empleo.component.css
+++ b/src/app/Compartido/buscar-empleo/buscar-empleo.component.css
@@ -14,6 +14,17 @@
 .buscador-boton{
     background-color: #33bbd1;
     margin-left: 10%;
+    margin-bottom: 10px;
+    width: 35%;
+    height: 70px;
+    color: white;
+    border-radius: 15px;
+}
+.buscador-boton2{
+    background-color: #ff6200;
+    margin-left: 10%;
+    margin-bottom: 10px;
+    width: 35%;
     height: 70px;
     color: white;
     border-radius: 15px;
@@ -62,5 +73,9 @@
 .card-boton{
     background-color:#142f3f;
     width: 50%;
+    color: white;
+}
+mat-paginator{
+    background-color: #33bcd1;
     color: white;
 }
