--- a/src/app/empresas/postulantes/postulantes.component.html
+++ b/src/app/empresas/postulantes/postulantes.component.html
@@ -5,74 +5,87 @@
             <li *ngFor="let error of errores">{{ error }}</li>
         </ul>
     </div>
-    <div class="contenedor_cards_postulantes" fxLayout="row" fxLayoutAlign="space-around">
+
+
+
+    <div class="contenedor_cards_postulantes"  fxLayoutAlign="center">
         <div fxLayout="column" >
-            <mat-card class="card_postulante" *ngFor="let item of postulantes1">
-                <div fxLayout="row">
-                    <div >
-                        <!-- <img class="card_imagen" src="http://www.nosotros-los-ingenieros.com/wp-content/uploads/2020/06/cooper.jpg" alt=""> -->
-                        <img class="card_imagen" [src]="item.foto_perfil" alt="">
-                    </div>
-                    <div class="card_contenido" fxLayout="column">
-                        <mat-card-title >
-                            <h3 class="card_nombre">{{item.nombres}} {{item.apellidos}}</h3>
-                        </mat-card-title>
-                        <mat-card-subtitle>
-                            <h3 class="card_cargo">{{item.profesion_ocupacion}}</h3>
-                        </mat-card-subtitle>
-                        <mat-card-content >
-                            <div class="contenido_descripcion">
-                                <span>Postulado para:</span>   <br> <p>{{item.puesto_empleo}}</p> 
-                            </div>
+            <div *ngFor="let item of postulantes; let i = index">
+                <mat-card class="card_postulante" *ngIf="i%2 == 0" >
+                    <div fxLayout="row">
+                        <div >
+                            <!-- <img class="card_imagen" src="http://www.nosotros-los-ingenieros.com/wp-content/uploads/2020/06/cooper.jpg" alt=""> -->
+                            <img class="card_imagen" [src]="item.foto_perfil" alt="">
+                        </div>
+                        <div class="card_contenido" fxLayout="column">
+                            <mat-card-title >
+                                <h3 class="card_nombre">{{item.nombres}} {{item.apellidos}}</h3>
+                            </mat-card-title>
+                            <mat-card-subtitle>
+                                <h3 class="card_cargo">{{item.profesion_ocupacion}}</h3>
+                            </mat-card-subtitle>
+                            <mat-card-content >
+                                <div class="contenido_descripcion">
+                                    <span>Postulado para:</span>   <br> <p>{{item.puesto_empleo}}</p> 
+                                </div>
+                                
+                            </mat-card-content>
                             
-                        </mat-card-content>
+                        </div>
                         
                     </div>
-                    
-                </div>
-                <div  fxLayout="rows" fxLayoutAlign="center">
-                    <button class="card_boton" mat-button>Ver perfil</button>
-                    <button class="card_boton" mat-button (click)="verPDF(item.cv)" >Revisar CV</button>
-                    <button class="card_boton" mat-button>descartar</button>
-                </div>
-            </mat-card>
-        </div>
-        <div fxLayout="column" >
-            <mat-card class="card_postulante" *ngFor="let item of postulantes2">
-                <div fxLayout="row">
-                    <div >
-<!--                         <img class="card_imagen" src="http://www.nosotros-los-ingenieros.com/wp-content/uploads/2020/06/cooper.jpg" alt="">
- -->                        <img class="card_imagen" [src]="item.foto_perfil" alt="">
+                    <div  fxLayout="rows" fxLayoutAlign="center">
+                        <button class="card_boton" mat-button>Ver perfil</button>
+                        <button class="card_boton" mat-button (click)="verPDF(item.cv)" >Revisar CV</button>
+                        <button class="card_boton" mat-button>descartar</button>
                     </div>
-                    <div class="card_contenido" fxLayout="column">
-                        <mat-card-title >
-                            <h3 class="card_nombre">{{item.nombres}} {{item.apellidos}}</h3>
-                        </mat-card-title>
-                        <mat-card-subtitle>
-                            <h3 class="card_cargo">{{item.profesion_ocupacion}}</h3>
-                        </mat-card-subtitle>
-                        <mat-card-content >
-                            <div class="contenido_descripcion">
-                                <span>Postulado para:</span>   <br> <p>{{item.puesto_empleo}} </p> 
-                            </div>
+                </mat-card>
+            </div>
+            
+        </div>
+
+        <div fxLayout="column" >
+            <div *ngFor="let item of postulantes; let i= index">
+                <mat-card class="card_postulante" *ngIf="i%2 == 1">
+                    <div fxLayout="row">
+                        <div >
+    <!--                         <img class="card_imagen" src="http://www.nosotros-los-ingenieros.com/wp-content/uploads/2020/06/cooper.jpg" alt="">
+     -->                        <img class="card_imagen" [src]="item.foto_perfil" alt="">
+                        </div>
+                        <div class="card_contenido" fxLayout="column">
+                            <mat-card-title >
+                                <h3 class="card_nombre">{{item.nombres}} {{item.apellidos}}</h3>
+                            </mat-card-title>
+                            <mat-card-subtitle>
+                                <h3 class="card_cargo">{{item.profesion_ocupacion}}</h3>
+                            </mat-card-subtitle>
+                            <mat-card-content >
+                                <div class="contenido_descripcion">
+                                    <span>Postulado para:</span>   <br> <p>{{item.puesto_empleo}} </p> 
+                                </div>
+                                
+                            </mat-card-content>
                             
-                        </mat-card-content>
+                        </div>
                         
                     </div>
-                    
-                </div>
-                <div  fxLayout="rows" fxLayoutAlign="center">
-                    <button class="card_boton" mat-button>Ver perfil</button>
-                    <button class="card_boton" mat-button (click)="verPDF(item.cv)">Revisar CV</button>
-                    <button class="card_boton" mat-button>descartar</button>
-                </div>
-            </mat-card>
+                    <div  fxLayout="rows" fxLayoutAlign="center">
+                        <button class="card_boton" mat-button>Ver perfil</button>
+                        <button class="card_boton" mat-button (click)="verPDF(item.cv)">Revisar CV</button>
+                        <button class="card_boton" mat-button>descartar</button>
+                    </div>
+                </mat-card>
+            </div>
+            
         </div>
-        
 
-
-
-        
-        
     </div>
+
+
+
+    <mat-paginator [pageSizeOptions]="[1,2,4,8]" showFirstLastButtons
+        [length]="cantidadTotalRegistros" [pageSize]="cantidadRegistrosAMostrar"
+        (page)="actualizarPaginacion($event)" class="paginador">
+
+        </mat-paginator>
 </div>
