--- a/src/app/postulantes/postulaciones/postulaciones.component.html
+++ b/src/app/postulantes/postulaciones/postulaciones.component.html
@@ -1,1 +1,35 @@
-<p>postulaciones works!</p>
+<div class="contenedor-postulaciones">
+    <div fxLayoutAlign="center"><h1 class="titulo_perfil">Mis Postulaciones</h1></div>
+    <div class="contenedor-cards">
+        <mat-card class="card-postulaciones" *ngFor="let item of postulaciones" fxLayout="row">
+            <div fxLayout="column" class="card-contenido">
+                <mat-card-title>{{item.puesto_empleo}}</mat-card-title>
+                <mat-card-subtitle class="contenido-fecha">Fecha postulacion:{{item.fecha_postulacion}}</mat-card-subtitle>
+                <mat-card-content>
+                    {{item.descripcion.substring(0,200)}}...
+                    <br>
+                    <div fxLayoutAlign="center" *ngIf="item.estado == 'Postulado'" style="background-color:#33bbd1; border-radius: 15px;">
+                        <strong>Estado postulacion: {{item.estado}}</strong> 
+                    </div>
+                    <div fxLayoutAlign="center" *ngIf="item.estado == 'Aceptado'" style="background-color:greenyellow;border-radius: 15px;">
+                        <strong>Estado postulacion: {{item.estado}}</strong> 
+                    </div>
+                    <div fxLayoutAlign="center" *ngIf="item.estado == 'Rechazado'" style="background-color:#ff6200;border-radius: 15px;">
+                        <strong>Estado postulacion: {{item.estado}}</strong> 
+                    </div>
+                      
+                </mat-card-content>
+            </div>
+            <div fxLayout="column" class="card-botones">
+                <button class="boton-detalle" mat-button [routerLink]="['/detalle-empleo',item.publicacionesId]">Ver detalle empleo</button>
+                <button class="boton-eliminar" mat-button [routerLink]="['/detalle-empleo',item.publicacionesId]">Eliminar postulacion</button>
+            </div>
+            
+        </mat-card>
+    </div>
+    <mat-paginator [pageSizeOptions]="[1,2,4,8]" showFirstLastButtons
+    [length]="cantidadTotalRegistros" [pageSize]="cantidadRegistrosAMostrar"
+    (page)="actualizarPaginacion($event)" class="paginador" >
+
+    </mat-paginator>
+</div>
