--- a/src/app/Compartido/home/home.component.html
+++ b/src/app/Compartido/home/home.component.html
@@ -8,7 +8,7 @@
                 </ng-container>
                 
             </app-autorizado>
-            <div class="buscador-descripcion" ><h1 class="buscador-descripcion-texto">Busca y encuentra todas las ofertas de empleo en Chuquisaca</h1></div>
+            <div class="buscador-descripcion" ><h1 class="buscador-descripcion-texto">Busca, encuentra y oferta oportunidades de empleo en Chuquisaca</h1></div>
             <div class="buscador-box">
                 <form class="buscador-box-formulario" [formGroup]="form">
                     <div fxLayoutAlign="row">
