--- a/src/app/empresas/detalle-postulante/detalle-postulante.component.css
+++ b/src/app/empresas/detalle-postulante/detalle-postulante.component.css
@@ -73,3 +73,23 @@ li{
     border-radius: 15px;
     margin: 1rem;
 }
+.contenedor-botones{
+    margin-left: 10%;
+    
+}
+.boton-formulario{
+    background-color: #142f3f;
+    color: white;
+    font-size: 20px;
+    height: 50px;
+    margin-top: 1%;
+
+}
+.boton-formulario-rechazar{
+    background-color: #FF6200;
+    color: white;
+    font-size: 20px;
+    height: 50px;
+    margin-top: 1%;
+
+}
