--- a/src/app/administrador/administrar-tablas/administrar-tablas.component.html
+++ b/src/app/administrador/administrar-tablas/administrar-tablas.component.html
@@ -1,1 +1,52 @@
-<p>administrar-tablas works!</p>
+<div class="contenedor-tablas" fxLayout="row" fxLayoutAlign="center"> 
+    
+    <div class="separador-tablas" >
+        <div fxLayoutAlign="center"><h1 class="titulo">Categorias</h1></div>
+        <div class="tabla-individual">
+            <table mat-table [dataSource]="categorias" class="mat-elevation-z8">
+                <ng-container matColumnDef="Id" >
+                    <th mat-header-cell *matHeaderCellDef > Id </th>
+                    <td mat-cell *matCellDef="let element " > {{element.id }} </td>
+                </ng-container>
+                <ng-container matColumnDef="Nombre" >
+                    <th mat-header-cell *matHeaderCellDef > Nombre </th>
+                    <td mat-cell *matCellDef="let element " > {{element.nombre }} </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="columnas_categorias"></tr>
+                <tr mat-row *matRowDef="let row; columns: columnas_categorias;"></tr>
+            </table>
+        </div>
+        <div>
+            <mat-paginator [pageSizeOptions]="[5,10,15,20]" showFirstLastButtons
+            [length]="cantidadTotalRegistros1" [pageSize]="cantidadRegistrosAMostrar1"
+            (page)="actualizarPaginacion1($event)" class="paginador">
+            </mat-paginator>
+        </div>
+        
+
+    </div>
+    <div class="separador-tablas" >
+        <div fxLayoutAlign="center"><h1 class="titulo">Estados</h1></div>
+        <div class="tabla-individual">
+            <table mat-table [dataSource]="estados" class="mat-elevation-z8">
+                <ng-container matColumnDef="Id" >
+                    <th mat-header-cell *matHeaderCellDef > Id </th>
+                    <td mat-cell *matCellDef="let element" > {{element.id }} </td>
+                </ng-container>
+                <ng-container matColumnDef="Nombre" >
+                    <th mat-header-cell *matHeaderCellDef > Nombre </th>
+                    <td mat-cell *matCellDef="let element " > {{element.nombre }} </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="columnas_estados"></tr>
+                <tr mat-row *matRowDef="let row; columns: columnas_estados;"></tr>
+            </table>
+        </div>
+        <div>
+            <mat-paginator [pageSizeOptions]="[5,10,15,20]" showFirstLastButtons
+            [length]="cantidadTotalRegistros2" [pageSize]="cantidadRegistrosAMostrar2"
+            (page)="actualizarPaginacion2($event)" class="paginador">
+            </mat-paginator>
+        </div>
+        
+    </div>
+</div>
