--- a/src/app/administrador/administrar-usuarios/administrar-usuarios.component.html
+++ b/src/app/administrador/administrar-usuarios/administrar-usuarios.component.html
@@ -1,28 +1,32 @@
 
 <div class="contenedor-tabla-usuarios">
-    <table mat-table [dataSource]="listaUsuarios" class="mat-elevation-z8">
-        <ng-container matColumnDef="No" >
-            <th mat-header-cell *matHeaderCellDef > No </th>
-            <td mat-cell *matCellDef="let element = index " > {{element + 1}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Id" >
-            <th mat-header-cell *matHeaderCellDef > Id </th>
-            <td mat-cell *matCellDef="let element" > {{element.id}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Email">
-            <th mat-header-cell *matHeaderCellDef> Email </th>
-            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Rol">
-            <th mat-header-cell *matHeaderCellDef> Rol </th>
-            <td mat-cell *matCellDef="let element"> {{element.rol}} </td>
-        </ng-container>
+    <div fxLayoutAlign="center"><h1 class="titulo">Usuarios</h1></div>
+    <div class="tabla-individual">
+        <table mat-table [dataSource]="listaUsuarios" class="mat-elevation-z8">
+            <ng-container matColumnDef="No" >
+                <th mat-header-cell *matHeaderCellDef > No </th>
+                <td mat-cell *matCellDef="let element = index " > {{element + 1}} </td>
+            </ng-container>
+            <ng-container matColumnDef="Id" >
+                <th mat-header-cell *matHeaderCellDef > Id </th>
+                <td mat-cell *matCellDef="let element" > {{element.id}} </td>
+            </ng-container>
+            <ng-container matColumnDef="Email">
+                <th mat-header-cell *matHeaderCellDef> Email </th>
+                <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+            </ng-container>
+            <ng-container matColumnDef="Rol">
+                <th mat-header-cell *matHeaderCellDef> Rol </th>
+                <td mat-cell *matCellDef="let element"> {{element.rol}} </td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
+        </table>
+    </div>
     
-        <tr mat-header-row *matHeaderRowDef="columnas"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
-    </table>
 
-    <mat-paginator [pageSizeOptions]="[1,2,4,8]" showFirstLastButtons
+    <mat-paginator [pageSizeOptions]="[5,10,15,20]" showFirstLastButtons
     [length]="cantidadTotalRegistros" [pageSize]="cantidadRegistrosAMostrar"
     (page)="actualizarPaginacion($event)" class="paginador">
     </mat-paginator>
