--- a/src/app/Compartido/menu/menu.component.html
+++ b/src/app/Compartido/menu/menu.component.html
@@ -90,6 +90,8 @@
 
             <button class="toolbar-boton" mat-button (click)="navegar('')">Inicio</button>
 
+            <button class="toolbar-boton" mat-button (click)="navegar('buscar-empleo')">Ver publicaciones</button>
+
             <button class="toolbar-boton" mat-button (click)="navegar('administrador/administrar-usuarios')">usuarios</button>
 
             <!-- <button class="toolbar-boton" mat-button (click)="navegar('administrador/administrar-publicaciones')">publicaciones</button> -->
