--- a/src/app/Compartido/detalle-empleo/detalle-empleo.component.html
+++ b/src/app/Compartido/detalle-empleo/detalle-empleo.component.html
@@ -14,6 +14,13 @@
                     </ng-container>
                     
                 </app-autorizado>
+
+                <app-autorizado [rol]="'administrador'">
+                    <ng-container Autorizado>
+                        <button (click)="generarReporte(detalle_empleo.id)"  mat-button class="guardar-empleo" >generar informe de empleo</button>
+                    </ng-container>
+                    
+                </app-autorizado>
                 
 
 
