--- a/src/app/administrador/administrar-usuarios/administrar-usuarios.component.html
+++ b/src/app/administrador/administrar-usuarios/administrar-usuarios.component.html
@@ -19,6 +19,12 @@
                 <th mat-header-cell *matHeaderCellDef> Rol </th>
                 <td mat-cell *matCellDef="let element"> {{element.rol}} </td>
             </ng-container>
+            <ng-container matColumnDef="Opciones">
+                <th mat-header-cell *matHeaderCellDef> Opciones </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <button *ngIf="element.rol != 'administrador'" class="boton-opciones" mat-button (click)="generarInforme(element.id,element.rol)">generar informe de usuario </button>
+                </td>
+            </ng-container>
         
             <tr mat-header-row *matHeaderRowDef="columnas"></tr>
             <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
