--- a/src/app/administrador/informe-de-datos/informe-de-datos.component.html
+++ b/src/app/administrador/informe-de-datos/informe-de-datos.component.html
@@ -1,5 +1,13 @@
 <div class="contenedor-datos" >
     <div fxLayoutAlign="center"><h1 class="titulo">Reporte de Datos</h1></div>
+    <div fxLayoutAlign="end">
+        <button mat-button class="descargar-pdf" (click)="GenerarBackup()">
+            Generar Backup de la base de datos 
+        </button>
+        <button mat-button class="descargar-pdf" (click)="createPDF()">
+            Descargar informe Pdf
+        </button>
+    </div>
     <div class="contenedor-tabla" *ngIf="datosReporte">
         <table >
             <tr>
@@ -20,11 +28,7 @@
         </table>
         
     </div>
-    <div fxLayoutAlign="end">
-        <button mat-button class="descargar-pdf" (click)="createPDF()">
-            Descargar informe Pdf
-        </button>
-    </div>
+    
     
 </div>
 
