--- a/src/app/administrador/administrar-tablas/administrar-tablas.component.html
+++ b/src/app/administrador/administrar-tablas/administrar-tablas.component.html
@@ -1,7 +1,10 @@
-<div class="contenedor-tablas" fxLayout="row" fxLayoutAlign="center"> 
+<div class="contenedor-tablas" fxLayout="row" fxLayoutAlign="space-around"> 
     
     <div class="separador-tablas" >
         <div fxLayoutAlign="center"><h1 class="titulo">Categorias</h1></div>
+        <div>
+            <button mat-button class="boton-crear" [routerLink]="['crear-categoria']" >Agregar categoria</button>
+        </div>
         <div class="tabla-individual">
             <table mat-table [dataSource]="categorias" class="mat-elevation-z8">
                 <ng-container matColumnDef="Id" >
@@ -11,6 +14,13 @@
                 <ng-container matColumnDef="Nombre" >
                     <th mat-header-cell *matHeaderCellDef > Nombre </th>
                     <td mat-cell *matCellDef="let element " > {{element.nombre }} </td>
+                </ng-container>
+                <ng-container matColumnDef="Opciones" >
+                    <th mat-header-cell *matHeaderCellDef > Opciones </th>
+                    <td mat-cell *matCellDef="let element " > 
+                        <button mat-button (click)="opendDialog(element.id)" class="boton-eliminar">Eliminar</button>
+                        <button mat-button [routerLink]="['editar-categoria/',element.id]" class="boton-editar">Editar</button>
+                    </td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="columnas_categorias"></tr>
                 <tr mat-row *matRowDef="let row; columns: columnas_categorias;"></tr>
@@ -41,12 +51,12 @@
                 <tr mat-row *matRowDef="let row; columns: columnas_estados;"></tr>
             </table>
         </div>
-        <div>
+        <!-- <div>
             <mat-paginator [pageSizeOptions]="[5,10,15,20]" showFirstLastButtons
             [length]="cantidadTotalRegistros2" [pageSize]="cantidadRegistrosAMostrar2"
             (page)="actualizarPaginacion2($event)" class="paginador">
             </mat-paginator>
-        </div>
+        </div> -->
         
     </div>
 </div>
